[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/UI/GUI.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UI/Sections/SimulationModeSection.tscn" type="PackedScene" id=2]
[ext_resource path="res://GFX/glassPanel.png" type="Texture" id=3]
[ext_resource path="res://GFX/arrow_right.png" type="Texture" id=4]
[ext_resource path="res://GFX/arrow_left.png" type="Texture" id=5]
[ext_resource path="res://Scenes/UI/Sections/MiscSection.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/UI/Sections/EnvironmentSection.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/UI/Sections/GeneticAlgorithmSection.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/UI/Sections/ScenarioSection.tscn" type="PackedScene" id=10]

[sub_resource type="Animation" id=1]
resource_name = "hide"
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("ConfigGUI/Panel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 375, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "show"
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("ConfigGUI/Panel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 375, 0 ), Vector2( 0, 0 ) ]
}

[node name="GUI" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="ControlGUI" type="Control" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 151.0
margin_bottom = 45.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ControlGUI"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TrialLabel" type="Label" parent="ControlGUI/VBoxContainer"]
margin_right = 55.0
margin_bottom = 14.0
text = "Trial "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IterationLabel" type="Label" parent="ControlGUI/VBoxContainer"]
margin_top = 19.0
margin_right = 55.0
margin_bottom = 33.0
text = "Iteration"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfigGUI" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -419.0
margin_right = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="NinePatchRect" parent="ConfigGUI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 0
texture = ExtResource( 3 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ConfigGUI/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToggleButton" type="TextureButton" parent="ConfigGUI/Panel/HBoxContainer"]
margin_right = 32.0
margin_bottom = 580.0
size_flags_horizontal = 0
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )

[node name="ScrollContainer" type="ScrollContainer" parent="ConfigGUI/Panel/HBoxContainer"]
margin_left = 42.0
margin_right = 400.0
margin_bottom = 580.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ConfigGUI/Panel/HBoxContainer/ScrollContainer"]
margin_right = 346.0
margin_bottom = 736.0
size_flags_horizontal = 3
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UserManualButton" type="Button" parent="ConfigGUI/Panel/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_right = 346.0
margin_bottom = 20.0
text = "User Manual (opens in browser)"

[node name="SectionsContainer" type="VBoxContainer" parent="ConfigGUI/Panel/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 346.0
margin_bottom = 696.0
size_flags_vertical = 3
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnvironmentSection" parent="ConfigGUI/Panel/HBoxContainer/ScrollContainer/VBoxContainer/SectionsContainer" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 346.0
margin_bottom = 196.0

[node name="GeneticAlgorithmSection" parent="ConfigGUI/Panel/HBoxContainer/ScrollContainer/VBoxContainer/SectionsContainer" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 206.0
margin_right = 346.0
margin_bottom = 261.0

[node name="ScenarioSection" parent="ConfigGUI/Panel/HBoxContainer/ScrollContainer/VBoxContainer/SectionsContainer" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 271.0
margin_right = 346.0
margin_bottom = 456.0

[node name="SimulationModeSection" parent="ConfigGUI/Panel/HBoxContainer/ScrollContainer/VBoxContainer/SectionsContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 466.0
margin_right = 346.0
margin_bottom = 574.0

[node name="MiscSection" parent="ConfigGUI/Panel/HBoxContainer/ScrollContainer/VBoxContainer/SectionsContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 584.0
margin_right = 346.0
margin_bottom = 656.0

[node name="SimulationToggleButton" type="Button" parent="ConfigGUI/Panel/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 716.0
margin_right = 346.0
margin_bottom = 736.0
toggle_mode = true
text = "Start Simulation"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hide = SubResource( 1 )
anims/show = SubResource( 2 )
[connection signal="pressed" from="ConfigGUI/Panel/HBoxContainer/ToggleButton" to="." method="_on_ToggleButton_pressed"]
[connection signal="pressed" from="ConfigGUI/Panel/HBoxContainer/ScrollContainer/VBoxContainer/UserManualButton" to="." method="_on_UserManualButton_pressed"]
[connection signal="toggled" from="ConfigGUI/Panel/HBoxContainer/ScrollContainer/VBoxContainer/SimulationToggleButton" to="." method="_on_SimulationToggleButton_toggled"]
